# geo-lib

./: .gitignore  README.md  pyproject.toml
docs/: IMPLEMENTATION_ROADMAP.md  SPEC_TRACEABILITY.md  STATUS.md
src/reservoir_data/: __init__.py
src/reservoir_data/application/: __init__.py  case_loader.py  deck_service.py  export_service.py  file_catalog.py  grid_property_service.py  restart_service.py  rft_service.py  summary_service.py  well_service.py
src/reservoir_data/domain/: __init__.py
src/reservoir_data/exceptions/: __init__.py  errors.py
src/reservoir_data/formats/: __init__.py
src/reservoir_data/infrastructure/: __init__.py
src/reservoir_data/public/: __init__.py  case_facade.py  deck_facade.py  grid_facade.py  property_facade.py  restart_facade.py  rft_facade.py  summary_facade.py  units_facade.py  well_facade.py
src/reservoir_data/schemas/: __init__.py  detection.py  export.py  loading.py  queries.py
tests/: test_binary_io.py  test_case_discovery.py  test_deck_metadata.py  test_export_service.py  test_file_detection.py  test_file_detector.py  test_formatted_keyword_reader.py  test_grdecl_grid_builder.py  test_grdecl_parser.py  test_grid_domain.py  test_grid_init_readers.py  test_keyword_dataset.py  test_lazy_cache_hardening.py  test_load_options.py  test_manifest_and_options.py  test_numpy_boundaries.py  test_payload_format_contracts.py  test_public_facades.py  test_report_queries.py  test_restart_reader.py  test_summary_reader.py  test_summary_resampling.py  test_units_phase.py  test_well_rft_reader.py
(+76 files in other folders)
