[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoir-data"
version = "0.1.0"
description = "Object-oriented reservoir simulation data access library."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "reservoir_data contributors" }
]
license = { text = "Proprietary" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=2"]
numpy = ["numpy>=1.24"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.unittest]
start-dir = "tests"
