[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reservoir-data"
version = "0.1.0"
description = "Object-oriented Python interfaces for reservoir simulation data."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "reservoir_data contributors" }
]
dependencies = []

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
